--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,17 +19,19 @@ h1, h2 {
     margin-left: 25px; 
     width: 33%;
 }
-sup {
-    font-size: 40%;
-}
+
 #menu li {
     float: right;
     list-style-type: none;
     margin-right: 30px;
+    margin-top: 25px;
+    letter-spacing: 4px;
 }
 #menu a{
     text-decoration: none;
     color: inherit;
+    font-size: large;
+    
 }
 #menu a:hover{
     border-bottom: 2px solid #433d3d;
@@ -49,6 +51,10 @@ sup {
     animation-duration: 5s;
     animation-fill-mode: forwards;
     text-align: center;
+    opacity: 83%;
+}
+sup {
+    font-size: 40%;
 }
 #centered-text {
 position: absolute;
@@ -57,18 +63,17 @@ left: 43%;
 margin: -50px 0 0 -50px;
 }
 #centered-text h1{
-    text-shadow: 2px 2px rgb(18, 18, 19)
+    text-shadow: 2px 2px rgb(18, 18, 19);
+    color: aliceblue;
 }
 #centered-text h2 {
     color: blue;
     font-size: medium;
 }
-#centered-text h1,h2 {
-    color: aliceblue;
+#centered-text h1,h2 {  
     text-align: center;
     font-size: xx-large;
-    font-family: Roboto, sans-serif;
-    
+    font-family: Roboto, sans-serif; 
 }
 
 
