--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,18 @@ body{
     font-family: Merriweather, sans-serif;
     font-weight: 300;
     color: #3a3a3a;
+    margin: 0;
 }
 
 /*headings and logos*/
+header {
+    position: sticky;
+    top: 0;
+    z-index: 999;
+    background-color: white;
+    height: 60px;
+    width: 100%;
+  }
 
 h1, h2 {
     font-family: Roboto, sans-serif;
@@ -35,7 +44,7 @@ h1, h2 {
 }
 #menu a:hover{
     border-bottom: 2px solid #433d3d;
-    font-size: 102%;
+    font-size: 100%;
 }
 .active {
     border-bottom: 1px solid #3a3a3a;
@@ -62,15 +71,13 @@ top: 44%;
 left: 43%;
 margin: -50px 0 0 -50px;
 }
-#centered-text h1{
-    text-shadow: 2px 2px rgb(18, 18, 19);
-    color: aliceblue;
-}
+
 #centered-text h2 {
-    color: blue;
+    
     font-size: medium;
 }
-#centered-text h1,h2 {  
+#centered-text h1,h2 { 
+    color: black; 
     text-align: center;
     font-size: xx-large;
     font-family: Roboto, sans-serif; 
@@ -93,4 +100,79 @@ from {
 to{
     transform: scale(1.1);
 }
+}
+
+  /*Who we are section*/
+
+  #groupsections{
+    height: 700px;
+  }
+
+  #group{
+    text-align: center;
+    margin: 20px 0;
+    font-size: 280%;
+}
+
+#left-about {
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+    
+}
+
+#right-about {
+    padding: 30px;
+    width: 33%;
+    float: right;
+    
+}
+
+#center-about {
+    width: 33%;
+    margin: 0 auto;
+    
+}
+
+
+
+.left-about-heading{
+    width: 60%;
+    float: right;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
+
+.right-about-heading{
+    width: 60%;
+    float: left;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
+.right-about-heading h2{
+    text-align: right;
+}
+.right-about-heading p{
+    text-align: right;
+}
+
+
+
+#circle-container{
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+#circle-cover-bg{
+    background: url('../images/ethos-center-image.jpg') no-repeat center center;
+    height: 100%;
+    border-radius: 50%;
 }
