--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ h3{
     animation-duration: 5s;
     animation-fill-mode: forwards;
     text-align: center;
-    opacity: 85%;
+    opacity: 100%;
     margin-top: 0;
 }
 #flag-outer{
@@ -154,7 +154,10 @@ to{
 
   #groupsections{
     padding-top: 3%;
-    height: 2500px;
+    height: 2900px;
+  }
+  #groupsections h1 {
+    text-decoration: underline;
   }
 
   #group{
@@ -225,13 +228,9 @@ to{
 
 
 #circle-container{
-    width: 300px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
     padding: 30px;
-    border-style: solid;
-    border-color: #ccc;
-    border-width: 1px;
-    border-radius: 50%;
     margin: 0 auto;
 }
 
@@ -241,17 +240,17 @@ to{
     border-radius: 50%;
 }
 #circle-cover-cubs{
-    background: url('../images/ethos-center-image.jpg') no-repeat center center;
+    background: url('../images/cubs.jpeg') no-repeat center center;
     height: 100%;
     border-radius: 50%;
 }
 #circle-cover-scouts{
-    background: url('../images/ethos-center-image.jpg') no-repeat center center;
+    background: url('../images/scouts.jpg') no-repeat center center;
     height: 100%;
     border-radius: 50%;
 }
 #circle-cover-ventures{
-    background: url('../images/ethos-center-image.jpg') no-repeat center center;
+    background: url('../images/ventures.jpg') no-repeat center center;
     height: 100%;
     border-radius: 50%;
 }
@@ -283,3 +282,36 @@ to{
        color: #fafafa
    }
    
+
+
+   .social-networks {
+    text-align: center;
+}
+.social-networks > li {
+    display: inline;
+}
+.social-networks i {
+    font-size: 200%;
+    margin: 1%;
+    padding: 3%;
+    color: #252525;
+}
+
+
+/* fade in text test*/
+
+.fade-in-text {
+    font-family: Arial;
+    font-size: 60px;
+    animation: fadeIn 5s;
+    -webkit-animation: fadeIn 5s;
+    -moz-animation: fadeIn 5s;
+    -o-animation: fadeIn 5s;
+    -ms-animation: fadeIn 5s;
+  }
+  
+  @keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+  
