--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,18 +21,19 @@ h1, h2 {
     font-family: Roboto, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
-    color: #252525
+    color:#29524A;
 }
 h3{
     font-family: Roboto, sans-serif;
     letter-spacing: 4px;
     color: #252525;
     font-size: x-large;
+    text-shadow: 2px 2px #030303;
 }
 #logo{
     float: left;
-    margin-left: 25px; 
-    width: 33%;
+    width: 25%;
+    text-align: center;
 }
 
 #menu li {
@@ -41,6 +42,7 @@ h3{
     margin-right: 30px;
     margin-top: 25px;
     letter-spacing: 4px;
+    
 }
 #menu a{
     text-decoration: none;
@@ -74,7 +76,7 @@ h3{
     animation-duration: 5s;
     animation-fill-mode: forwards;
     text-align: center;
-    opacity: 100%;
+    
     margin-top: 0;
 }
 #flag-outer{
@@ -90,7 +92,6 @@ sup {
 position: absolute;
 top: 44%;
 left: 43%;
-
 margin-left: auto;
 margin-right: auto;
 }
@@ -100,10 +101,12 @@ margin-right: auto;
     font-size: medium;
 }
 #centered-text h1,h2 { 
-    color: black; 
+    color: #C5AFA0; 
+    text-shadow: 2px 2px #030303;
     text-align: center;
     font-size: xx-large;
     font-family: Roboto, sans-serif; 
+    background-color: #29524A;
 }
 
 
@@ -131,7 +134,7 @@ to{
     padding-left: 2%;
     padding-right: 2%;
     text-align: center;
-    
+    background-color: #29524A;
   }
   #group-paragraphs p {
     font-size: 16px;
@@ -139,12 +142,14 @@ to{
     text-align: justify;
     margin-left: auto;
     margin-right: auto;
+    color: #fafafa;
 
     
   }
   #group-paragraphs h3 {
     font-size: 30px;
-    padding-top: 2%;
+    
+    color: #C5AFA0;
   }
 
 
@@ -153,18 +158,26 @@ to{
 
 
   #groupsections{
-    padding-top: 3%;
-    height: 3000px;
+    padding-top: 1%;
+    height: 2750px;
+    background-color: #29524A;
   }
   #groupsections h1 {
     text-decoration: underline;
+    padding-bottom: 0%;
+    font-size: 300%;
+    color: #C5AFA0;
+    padding-top: 5%;
   }
 
-  #group{
+  #group {
     text-align: center;
-    margin: 20px 0;
     font-size: 250%;
+    margin-top: 3%;
+    text-shadow: 2px 2px #030303;
+    margin-bottom: 4%;
 }
+
 
 #left-about {
     padding-top: 20px;
@@ -180,7 +193,7 @@ to{
     
 }
 
-#center-about {
+#sections {
     width: 33%;
     margin: 0 auto;
     
@@ -230,7 +243,7 @@ to{
 #circle-container{
     width: 400px;
     height: 400px;
-    padding: 30px;
+    padding: 10px;
     margin: 0 auto;
 }
 
@@ -263,12 +276,12 @@ to{
     background-position: center;
     width: 100%;
     overflow: hidden;
-    padding-top: 3%;
+    padding-top: 0%;
    }
    
    #dayTimes div {
    color: #fafafa;
-   background-color: #252525;
+   background-color:#29524A;
    width: 20%;
    height: 200px;
    float: left;
@@ -280,7 +293,7 @@ to{
    }
    
    #dayTimes h2 {
-       color: #fafafa
+       color: #C5AFA0
    }
    
 
@@ -295,7 +308,7 @@ to{
     font-size: 200%;
     margin: 1%;
     padding: 3%;
-    color: #252525;
+    color: #29524A;
 }
 
 
@@ -315,4 +328,69 @@ to{
     0% { opacity: 0; }
     100% { opacity: 1; }
   }
+
+
+  /*Find us page*/
   
+#map {
+    margin: auto;
+    width: 50%;
+    
+    padding-top: 5%;
+    padding-left: 22.5%;
+    
+}
+
+  /*Join up form page*/
+
+  .form-section {
+    clear: left;
+    background-size: cover;
+    background-image: url(../images/scoutsswitz.JPG);
+    background-position: center;
+    height: 950px;
+}
+.signup-form {
+    margin: 150px 10% 0 0;
+    color: #fff;
+    background-color: rgba(60, 60, 60, 0.6);
+    max-width: 400px;
+    position: absolute;
+    left: 25%;
+    padding: 45px;
+}
+
+.signup-form > h2 {
+    color: #fafafa;
+    margin-bottom: 20px;
+}
+
+.text-input {
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+}
+
+.text-input:hover {
+    border-color: #f16c6b;
+}
+
+.join-button {
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px 15px 32px;
+    text-align: center;
+    font-size: 100%;
+    background-color: #f16c6b;
+    color: #fafafa;
+    display: block;
+}
+
+.join-button:hover {
+    background-color: #fafafa;
+    color: #f16c6b;
+}
