--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -424,7 +424,7 @@ to{
        font-size: medium;
     }
     #groupsections{
-        height: 3000px
+        height: 2450px
       }
       header {
           
@@ -438,7 +438,7 @@ to{
 @media screen and (max-width: 715px) {
   
     #groupsections{
-        height: 3200px
+        height: 2800px
       }
 }
 
@@ -446,24 +446,32 @@ to{
 @media screen and (max-width: 570px) {
   
     #groupsections{
-        height: 3400px
+        height: 2300px
       }
 
 }
 @media screen and (max-width: 475px) {
   
     #groupsections{
-        height: 3600px
+        height: 2500px
       }
 
 }
 @media screen and (max-width: 405px) {
   
     #groupsections{
-        height: 3700px
+        height: 2600px
       }
 
 }
+@media screen and (max-width: 350px) {
+  
+    #groupsections{
+        height: 2700px
+      }
+
+}
+
 
 
 
@@ -507,3 +515,38 @@ h2 {
         }
         
     }
+
+
+ @media screen and (max-width: 900px) { 
+    #circle-container{
+        width: 300px;
+        height: 300px;
+        padding: 10px;
+        margin: 0 auto;
+    }
+        
+    }
+
+    @media screen and (max-width: 900px) { 
+        #group-paragraphs p{
+            width: 100%;
+        }
+
+  
+    }
+   
+    @media screen and (max-width: 400px) {
+        #logo{
+           font-size: small;
+        }
+        h1{
+            text-shadow: revert;
+         }
+         header {
+            height: 55px;
+         }
+      
+    }
+
+
+   
