--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -438,16 +438,16 @@ to{
 
 /* 404 page big image */
 
-.error-outer {
+#error-outer {
     height: 1000px;
     width: 100%;
     overflow: hidden;
    
 }
-.error-image {
+#error-image {
     height: 1000px;
     width: 100%;
-    background: url('../images/Error404.jpg');
+    background: url('../images/Error404.jpg') no-repeat center center;
     text-align: center;
     margin-top: 0;
 }
