--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,6 +166,7 @@ to{
     padding-top: 1%;
     height: 2750px;
     background-color: #29524A;
+    text-align: center;
   }
   #groupsections h1 {
     text-decoration: underline;
