change font color of form submit button due to contrast error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,7 +419,7 @@ to{
     text-align: center;
     font-size: 100%;
     background-color: #29524A;
-    color: #C5AFA0;
+    color: white;
     display: block;
 }
 
